--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPlSYf1EfFrQSuztrXIT7+Q",
+      "authorship_tag": "ABX9TyP7ijwG45jQJttX0vqLeHi1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,19 @@
         "id": "KEQrUh-KmOYE"
       },
       "source": [
-        ""
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "\n",
+        "from torchtext.legacy.datasets import Multi30k\n",
+        "from torchtext.legacy.data import Field, BucketIterator\n",
+        "\n",
+        "import spacy\n",
+        "import numpy as np\n",
+        "\n",
+        "import random\n",
+        "import math\n",
+        "import time"
       ],
       "execution_count": null,
       "outputs": []
