--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP7ijwG45jQJttX0vqLeHi1",
+      "authorship_tag": "ABX9TyNHtKutlxCVgxANUNhLV/7r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,12 +40,49 @@
         "from torchtext.legacy.datasets import Multi30k\n",
         "from torchtext.legacy.data import Field, BucketIterator\n",
         "\n",
+        "from nltk.tokenize import StringTokenizer as st\n",
         "import spacy\n",
         "import numpy as np\n",
         "\n",
         "import random\n",
         "import math\n",
         "import time"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fpwfnS1aAie-"
+      },
+      "source": [
+        "SEED = 1234\n",
+        "\n",
+        "random.seed(SEED)\n",
+        "np.random.seed(SEED)\n",
+        "torch.manual_seed(SEED)\n",
+        "torch.cuda.manual_seed(SEED)\n",
+        "torch.backends.cudnn.deterministic = True"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9ZO_7kITApQv"
+      },
+      "source": [
+        "SRC = Field(tokenize = st, \n",
+        "            init_token = '<sos>', \n",
+        "            eos_token = '<eos>', \n",
+        "            lower = True)\n",
+        "\n",
+        "TRG = Field(tokenize = st, \n",
+        "            init_token = '<sos>', \n",
+        "            eos_token = '<eos>', \n",
+        "            lower = True)"
       ],
       "execution_count": null,
       "outputs": []
