--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNHtKutlxCVgxANUNhLV/7r",
+      "authorship_tag": "ABX9TyOebazdD3ZLOZFiQkp/NwGK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "from torchtext.legacy.datasets import Multi30k\n",
         "from torchtext.legacy.data import Field, BucketIterator\n",
         "\n",
-        "from nltk.tokenize import StringTokenizer as st\n",
+        "from nltk.tokenize import word_tokenize\n",
         "import spacy\n",
         "import numpy as np\n",
         "\n",
@@ -48,7 +48,7 @@
         "import math\n",
         "import time"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -65,7 +65,7 @@
         "torch.cuda.manual_seed(SEED)\n",
         "torch.backends.cudnn.deterministic = True"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -74,15 +74,26 @@
         "id": "9ZO_7kITApQv"
       },
       "source": [
-        "SRC = Field(tokenize = st, \n",
+        "SRC = Field(tokenize = word_tokenize, \n",
         "            init_token = '<sos>', \n",
         "            eos_token = '<eos>', \n",
         "            lower = True)\n",
         "\n",
-        "TRG = Field(tokenize = st, \n",
+        "TRG = Field(word_tokenize, \n",
         "            init_token = '<sos>', \n",
         "            eos_token = '<eos>', \n",
         "            lower = True)"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eqw5M3WcGJQW"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
