--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNJz26/BcSNSAjC8Nr2vdzb",
+      "authorship_tag": "ABX9TyPkC0g3mQonhrR+q3kjO32u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "KEQrUh-KmOYE",
-        "outputId": "33b1e658-b058-442f-bf22-9ef4d69e2b04",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "33b1e658-b058-442f-bf22-9ef4d69e2b04"
       },
       "source": [
         "import torch\n",
@@ -53,7 +53,7 @@
         "import math\n",
         "import time"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +98,7 @@
         "            eos_token = '<eos>', \n",
         "            lower = True)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
         "train_data, valid_data, test_data = Multi30k.splits(exts = ('.de', '.en'), \n",
         "                                                    fields = (SRC, TRG))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,7 +122,7 @@
         "SRC.build_vocab(train_data, min_freq = 2)\n",
         "TRG.build_vocab(train_data, min_freq = 2)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -133,7 +133,7 @@
       "source": [
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -149,7 +149,7 @@
         "    batch_size = BATCH_SIZE, \n",
         "    device = device)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -189,7 +189,7 @@
         "        \n",
         "        return hidden, cell"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -249,7 +249,7 @@
         "        \n",
         "        return prediction, hidden, cell"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -312,7 +312,7 @@
         "        \n",
         "        return outputs"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -335,17 +335,17 @@
         "\n",
         "model = Seq2Seq(enc, dec, device).to(device)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "V-omtzS2JNQR",
-        "outputId": "965aba3f-4e72-4c8b-cabb-1bb2bf0a9b53",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "965aba3f-4e72-4c8b-cabb-1bb2bf0a9b53"
       },
       "source": [
         "def init_weights(m):\n",
@@ -354,7 +354,7 @@
         "        \n",
         "model.apply(init_weights)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -390,7 +390,7 @@
       "source": [
         "optimizer = optim.Adam(model.parameters())"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
         "\n",
         "criterion = nn.CrossEntropyLoss(ignore_index = TRG_PAD_IDX)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -450,7 +450,7 @@
         "        \n",
         "    return epoch_loss / len(iterator)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -491,7 +491,7 @@
         "        \n",
         "    return epoch_loss / len(iterator)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -506,16 +506,20 @@
         "    elapsed_secs = int(elapsed_time - (elapsed_mins * 60))\n",
         "    return elapsed_mins, elapsed_secs"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Iftad7XbJrP9"
+        "id": "Iftad7XbJrP9",
+        "outputId": "d0b21bee-312b-4114-d9c4-c0eed4312616",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "N_EPOCHS = 10\n",
+        "N_EPOCHS = 3\n",
         "CLIP = 1\n",
         "\n",
         "best_valid_loss = float('inf')\n",
@@ -539,7 +543,60 @@
         "    print(f'\\tTrain Loss: {train_loss:.3f} | Train PPL: {math.exp(train_loss):7.3f}')\n",
         "    print(f'\\t Val. Loss: {valid_loss:.3f} |  Val. PPL: {math.exp(valid_loss):7.3f}')"
       ],
-      "execution_count": null,
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 01 | Time: 27m 18s\n",
+            "\tTrain Loss: 3.297 | Train PPL:  27.020\n",
+            "\t Val. Loss: 3.952 |  Val. PPL:  52.044\n",
+            "Epoch: 02 | Time: 27m 3s\n",
+            "\tTrain Loss: 3.170 | Train PPL:  23.815\n",
+            "\t Val. Loss: 3.906 |  Val. PPL:  49.704\n",
+            "Epoch: 03 | Time: 27m 12s\n",
+            "\tTrain Loss: 3.027 | Train PPL:  20.643\n",
+            "\t Val. Loss: 3.852 |  Val. PPL:  47.075\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yDrsCNM0Snog",
+        "outputId": "af1fe3fe-6926-41df-deeb-1ba14b27e51c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive')"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/gdrive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YLpR8V3zTGKR"
+      },
+      "source": [
+        "model.load_state_dict(torch.load('tut1-model.pt'))\n",
+        "path = F\"/content/gdrive/My Drive/tut1-model.pt\" \n",
+        "torch.save(model.state_dict(), path)"
+      ],
+      "execution_count": 22,
       "outputs": []
     },
     {
