--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPyOnQsQGl/Fm+OxVF0XAwf",
+      "authorship_tag": "ABX9TyMQt6So1brij4CdGLsTD7Lz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -700,10 +700,9 @@
       "metadata": {
         "id": "TPT9LEs1f9hd",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e5028230-74d5-4041-e7ef-1a7f927ea1d0"
+        "outputId": "ffe66107-366c-48f9-869c-b3c906a3ad0a"
       },
       "source": [
         "out_dir = data_path + \"saved-models/\"\n",
@@ -790,28 +789,28 @@
         "            print(model.eval())\n",
         "            run_model(name_string)\n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "TFR= 0.5\n",
             "run is 1\n",
-            "tensor([[-0.0293, -0.0553, -0.0480, -0.0086, -0.0709, -0.0794, -0.0312,  0.0071,\n",
-            "          0.0673,  0.0432,  0.0202,  0.0184, -0.0520,  0.0218, -0.0635, -0.0142,\n",
-            "          0.0481, -0.0756,  0.0544,  0.0500, -0.0215,  0.0363, -0.0432, -0.0774,\n",
-            "          0.0763,  0.0497,  0.0330,  0.0149, -0.0571, -0.0146,  0.0490, -0.0491,\n",
-            "         -0.0466, -0.0518,  0.0704,  0.0469,  0.0664,  0.0647, -0.0153,  0.0329,\n",
-            "          0.0550,  0.0732,  0.0141, -0.0460, -0.0566,  0.0253, -0.0171,  0.0172,\n",
-            "         -0.0089,  0.0450]])\n",
+            "tensor([[-0.0317, -0.0068, -0.0656,  0.0148, -0.0166, -0.0284,  0.0234, -0.0314,\n",
+            "          0.0159,  0.0717,  0.0193, -0.0390, -0.0331, -0.0105,  0.0758,  0.0126,\n",
+            "         -0.0195, -0.0372,  0.0225,  0.0580,  0.0777, -0.0047,  0.0727, -0.0266,\n",
+            "          0.0326, -0.0063, -0.0696, -0.0692,  0.0568,  0.0499, -0.0170, -0.0157,\n",
+            "          0.0134, -0.0720,  0.0370, -0.0537, -0.0584, -0.0115, -0.0559,  0.0037,\n",
+            "          0.0054,  0.0036, -0.0099, -0.0752, -0.0618,  0.0649, -0.0317,  0.0122,\n",
+            "          0.0021,  0.0564]])\n",
             "10359\n",
-            "wants tensor([-0.0293, -0.0553, -0.0480, -0.0086, -0.0709, -0.0794, -0.0312,  0.0071,\n",
-            "         0.0673,  0.0432,  0.0202,  0.0184, -0.0520,  0.0218, -0.0635, -0.0142,\n",
-            "         0.0481, -0.0756,  0.0544,  0.0500, -0.0215,  0.0363, -0.0432, -0.0774,\n",
-            "         0.0763,  0.0497,  0.0330,  0.0149, -0.0571, -0.0146,  0.0490, -0.0491,\n",
-            "        -0.0466, -0.0518,  0.0704,  0.0469,  0.0664,  0.0647, -0.0153,  0.0329,\n",
-            "         0.0550,  0.0732,  0.0141, -0.0460, -0.0566,  0.0253, -0.0171,  0.0172,\n",
-            "        -0.0089,  0.0450])\n",
+            "wants tensor([-0.0317, -0.0068, -0.0656,  0.0148, -0.0166, -0.0284,  0.0234, -0.0314,\n",
+            "         0.0159,  0.0717,  0.0193, -0.0390, -0.0331, -0.0105,  0.0758,  0.0126,\n",
+            "        -0.0195, -0.0372,  0.0225,  0.0580,  0.0777, -0.0047,  0.0727, -0.0266,\n",
+            "         0.0326, -0.0063, -0.0696, -0.0692,  0.0568,  0.0499, -0.0170, -0.0157,\n",
+            "         0.0134, -0.0720,  0.0370, -0.0537, -0.0584, -0.0115, -0.0559,  0.0037,\n",
+            "         0.0054,  0.0036, -0.0099, -0.0752, -0.0618,  0.0649, -0.0317,  0.0122,\n",
+            "         0.0021,  0.0564])\n",
             "enc tensor([ 0.1927,  0.1655,  0.0019, -0.1502,  0.1600,  0.0017, -0.2758, -0.3668,\n",
             "         0.4246,  0.3457,  0.3559, -0.3872,  0.0376,  0.3435, -0.5560,  0.3198,\n",
             "        -0.0520, -0.5638, -0.0738,  0.2121, -0.1119,  0.0682, -0.1407,  0.2428,\n",
@@ -827,13 +826,13 @@
             "          0.1895, -0.1156, -0.1083, -0.2899,  0.2875,  0.1523, -0.1518, -0.1016,\n",
             "         -0.3404,  0.2787,  0.4194, -0.2447,  0.3855, -0.3031, -0.0535, -0.2409,\n",
             "         -0.4400, -0.2921]])\n",
-            "tensor([[ 0.0440,  0.0068,  0.0451,  0.0606, -0.0377, -0.0590,  0.0201, -0.0395,\n",
-            "         -0.0085,  0.0452, -0.0055, -0.0529,  0.0207,  0.0633,  0.0263, -0.0102,\n",
-            "         -0.0067,  0.0445, -0.0389, -0.0561,  0.0577, -0.0491,  0.0381, -0.0721,\n",
-            "         -0.0691,  0.0623,  0.0106,  0.0186, -0.0791,  0.0273, -0.0196,  0.0721,\n",
-            "          0.0226, -0.0468,  0.0176, -0.0176,  0.0348,  0.0075,  0.0582, -0.0655,\n",
-            "         -0.0110,  0.0016,  0.0288,  0.0685,  0.0181,  0.0020,  0.0370,  0.0002,\n",
-            "          0.0607,  0.0081]])\n",
+            "tensor([[ 0.0547,  0.0359, -0.0016,  0.0780, -0.0458, -0.0008,  0.0476,  0.0785,\n",
+            "         -0.0725,  0.0308,  0.0071,  0.0483, -0.0051,  0.0228,  0.0183,  0.0222,\n",
+            "          0.0634, -0.0009,  0.0057, -0.0025, -0.0240,  0.0467, -0.0422, -0.0134,\n",
+            "         -0.0005,  0.0370, -0.0398, -0.0327, -0.0124,  0.0133,  0.0352, -0.0662,\n",
+            "         -0.0407,  0.0070, -0.0021,  0.0367,  0.0262,  0.0090, -0.0049,  0.0252,\n",
+            "         -0.0327, -0.0011, -0.0646,  0.0788, -0.0717, -0.0330,  0.0571,  0.0218,\n",
+            "         -0.0193,  0.0452]])\n",
             "Seq2Seq(\n",
             "  (encoder): Encoder(\n",
             "    (embedding): Embedding(10359, 50, padding_idx=3)\n",
@@ -853,42 +852,14 @@
             "TFR 0.5\n",
             "epochs 2\n",
             "name_string pt-tf05-500-run-1-wemb-06-07-500-50-ep-\n",
-            "tr (tensor([   3,    3,    3,    3,    3,    3,    3,    3,    3,    3,   51,   22,\n",
-            "        2861, 7885,  235]), tensor([   1,   51,   22, 2861, 7885,  235,    2,    3,    3,    3,    3,    3,\n",
-            "           3,    3,    3,    3,    3]))\n",
-            "va (tensor([  3,   3,   3,   3,   3,   3,   3, 207,  33, 129,   4,  46,   8,  52,\n",
-            "         76]), tensor([  1, 207,  33, 129,   4,  46,   8,  52,  76,   2,   3,   3,   3,   3,\n",
-            "          3,   3,   3]))\n"
+            "tr (tensor([ 3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3, 89, 18, 25, 61]), tensor([ 1, 89, 18, 25, 61,  2,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3]))\n",
+            "va (tensor([   3,    3,    3,    3,    3,    3,    3,  147,   63,  197,  139,  533,\n",
+            "         168,    5, 5648]), tensor([   1,  147,   63,  197,  139,  533,  168,    5, 5648,    2,    3,    3,\n",
+            "           3,    3,    3,    3,    3]))\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-21-f662ac374b9a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     81\u001b[0m             \u001b[0mload_embs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 83\u001b[0;31m             \u001b[0mrun_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname_string\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-21-f662ac374b9a>\u001b[0m in \u001b[0;36mrun_model\u001b[0;34m(name_string)\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0mstart_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m         \u001b[0mtrain_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_iter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCLIP\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m         \u001b[0mvalid_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_iter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0;32mdel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpart_tr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-14-277ec9240427>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, iterator, optimizer, criterion, clip)\u001b[0m\n\u001b[1;32m     23\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclip_grad_norm_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclip\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    253\u001b[0m                 \u001b[0mcreate_graph\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    254\u001b[0m                 inputs=inputs)\n\u001b[0;32m--> 255\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    256\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    257\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    147\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m    148\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 149\u001b[0;31m         allow_unreachable=True, accumulate_grad=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m    150\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-TDMkRb9EZCy"
-      },
-      "source": [
-        "torch.save(model.state_dict(), 'tut1-model.pt')"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -989,9 +960,11 @@
         "            break\n",
         "    #print('getting output', output_indexes)\n",
         "    output_tokens = [trg_vocab.itos[i] for i in output_indexes]\n",
-        "    print(\"OUTPUT\", trg_tokens[1:])\n",
-        "    print('output', output_tokens)\n",
+        "    #print(\"OUTPUT\", trg_tokens[1:])\n",
+        "    ##print('output', output_tokens)\n",
         "    return(output_tokens)\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "execution_count": null,
