--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMQt6So1brij4CdGLsTD7Lz",
+      "authorship_tag": "ABX9TyOIB3tcNWK1a2Bk9jsTNX90",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f6af4b6c-7d90-4dea-ef6b-a392bfbad1ee"
+        "outputId": "23d92666-8fc6-4552-b9d6-02f83afbd37f"
       },
       "source": [
         "%reset\n",
@@ -69,7 +69,7 @@
         "val_filepaths = train_filepaths\n",
         "test_filepaths = train_filepaths\n"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +96,7 @@
         "torch.cuda.manual_seed(SEED)\n",
         "torch.backends.cudnn.deterministic = True\n"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
         "            out = out + char\n",
         "    return out"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -122,7 +122,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "05a36522-1a1b-4aa9-8f9b-ab8840851b6e"
+        "outputId": "5e13a731-62af-4c34-8ae7-837fbd21ff60"
       },
       "source": [
         "def get_riches_targets():\n",
@@ -145,7 +145,7 @@
         "\n",
         "src_counts = {}"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +184,7 @@
         "                    counter.update(strip_string(string_))\n",
         "    return Vocab(counter, specials=['<unk>', '<bos>', '<eos>', '<pad>'])\n"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -194,7 +194,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7793fa4f-7d27-4880-f782-f0bd0ab1c07d"
+        "outputId": "87ac08b1-4951-403e-de9a-efad2d8fc805"
       },
       "source": [
         "full_vocab = build_vocab(test_filepaths[0], test_set)\n",
@@ -231,7 +231,7 @@
         "N_EPOCHS = 2\n",
         "EPOCH_SIZE = 10\n"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,7 +303,7 @@
         "val_data = data_process(val_filepaths)\n",
         "test_data = data_process(test_filepaths)"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -346,7 +346,7 @@
         "    emb = enc.embedding.weight.data[lookup]\n",
         "    print(emb)"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -373,7 +373,7 @@
         "    #print(src_batch)\n",
         "    return src_batch, trg_batch\n"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -384,7 +384,7 @@
       "source": [
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -441,7 +441,7 @@
         "        #        print('weights', name)\n",
         "        return hidden, cell\n"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -512,7 +512,7 @@
         "\n",
         "        return prediction, hidden, cell\n"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -576,7 +576,7 @@
         "\n",
         "        return outputs"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -618,7 +618,7 @@
         "        epoch_loss += loss.item()\n",
         "    return epoch_loss / len(iterator)"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -649,7 +649,7 @@
         "            epoch_loss += loss.item()\n",
         "    return epoch_loss / len(iterator)"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -664,7 +664,7 @@
         "    elapsed_secs = int(elapsed_time - (elapsed_mins * 60))\n",
         "    return elapsed_mins, elapsed_secs"
       ],
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -692,6 +692,21 @@
         "        count += len(output)\n",
         "    print('word count', count)"
       ],
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jj7JQFDmHz_j"
+      },
+      "source": [
+        "def init_weights(m):\n",
+        "    for name, param in m.named_parameters():\n",
+        "        nn.init.uniform_(param.data, -0.08, 0.08)\n",
+        "        \n",
+        "model.apply(init_weights)"
+      ],
       "execution_count": null,
       "outputs": []
     },
@@ -700,9 +715,10 @@
       "metadata": {
         "id": "TPT9LEs1f9hd",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 266
         },
-        "outputId": "ffe66107-366c-48f9-869c-b3c906a3ad0a"
+        "outputId": "8ba60a24-6d72-471e-ca87-14fb2303adc7"
       },
       "source": [
         "out_dir = data_path + \"saved-models/\"\n",
@@ -789,87 +805,33 @@
         "            print(model.eval())\n",
         "            run_model(name_string)\n"
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "TFR= 0.5\n",
-            "run is 1\n",
-            "tensor([[-0.0317, -0.0068, -0.0656,  0.0148, -0.0166, -0.0284,  0.0234, -0.0314,\n",
-            "          0.0159,  0.0717,  0.0193, -0.0390, -0.0331, -0.0105,  0.0758,  0.0126,\n",
-            "         -0.0195, -0.0372,  0.0225,  0.0580,  0.0777, -0.0047,  0.0727, -0.0266,\n",
-            "          0.0326, -0.0063, -0.0696, -0.0692,  0.0568,  0.0499, -0.0170, -0.0157,\n",
-            "          0.0134, -0.0720,  0.0370, -0.0537, -0.0584, -0.0115, -0.0559,  0.0037,\n",
-            "          0.0054,  0.0036, -0.0099, -0.0752, -0.0618,  0.0649, -0.0317,  0.0122,\n",
-            "          0.0021,  0.0564]])\n",
-            "10359\n",
-            "wants tensor([-0.0317, -0.0068, -0.0656,  0.0148, -0.0166, -0.0284,  0.0234, -0.0314,\n",
-            "         0.0159,  0.0717,  0.0193, -0.0390, -0.0331, -0.0105,  0.0758,  0.0126,\n",
-            "        -0.0195, -0.0372,  0.0225,  0.0580,  0.0777, -0.0047,  0.0727, -0.0266,\n",
-            "         0.0326, -0.0063, -0.0696, -0.0692,  0.0568,  0.0499, -0.0170, -0.0157,\n",
-            "         0.0134, -0.0720,  0.0370, -0.0537, -0.0584, -0.0115, -0.0559,  0.0037,\n",
-            "         0.0054,  0.0036, -0.0099, -0.0752, -0.0618,  0.0649, -0.0317,  0.0122,\n",
-            "         0.0021,  0.0564])\n",
-            "enc tensor([ 0.1927,  0.1655,  0.0019, -0.1502,  0.1600,  0.0017, -0.2758, -0.3668,\n",
-            "         0.4246,  0.3457,  0.3559, -0.3872,  0.0376,  0.3435, -0.5560,  0.3198,\n",
-            "        -0.0520, -0.5638, -0.0738,  0.2121, -0.1119,  0.0682, -0.1407,  0.2428,\n",
-            "        -0.0775, -0.4191,  0.3381,  0.1537,  0.2311,  0.3229,  0.0125,  0.2666,\n",
-            "         0.1895, -0.1156, -0.1083, -0.2899,  0.2875,  0.1523, -0.1518, -0.1016,\n",
-            "        -0.3404,  0.2787,  0.4194, -0.2447,  0.3855, -0.3031, -0.0535, -0.2409,\n",
-            "        -0.4400, -0.2921])\n",
-            "10359\n",
-            "tensor([[ 0.1927,  0.1655,  0.0019, -0.1502,  0.1600,  0.0017, -0.2758, -0.3668,\n",
-            "          0.4246,  0.3457,  0.3559, -0.3872,  0.0376,  0.3435, -0.5560,  0.3198,\n",
-            "         -0.0520, -0.5638, -0.0738,  0.2121, -0.1119,  0.0682, -0.1407,  0.2428,\n",
-            "         -0.0775, -0.4191,  0.3381,  0.1537,  0.2311,  0.3229,  0.0125,  0.2666,\n",
-            "          0.1895, -0.1156, -0.1083, -0.2899,  0.2875,  0.1523, -0.1518, -0.1016,\n",
-            "         -0.3404,  0.2787,  0.4194, -0.2447,  0.3855, -0.3031, -0.0535, -0.2409,\n",
-            "         -0.4400, -0.2921]])\n",
-            "tensor([[ 0.0547,  0.0359, -0.0016,  0.0780, -0.0458, -0.0008,  0.0476,  0.0785,\n",
-            "         -0.0725,  0.0308,  0.0071,  0.0483, -0.0051,  0.0228,  0.0183,  0.0222,\n",
-            "          0.0634, -0.0009,  0.0057, -0.0025, -0.0240,  0.0467, -0.0422, -0.0134,\n",
-            "         -0.0005,  0.0370, -0.0398, -0.0327, -0.0124,  0.0133,  0.0352, -0.0662,\n",
-            "         -0.0407,  0.0070, -0.0021,  0.0367,  0.0262,  0.0090, -0.0049,  0.0252,\n",
-            "         -0.0327, -0.0011, -0.0646,  0.0788, -0.0717, -0.0330,  0.0571,  0.0218,\n",
-            "         -0.0193,  0.0452]])\n",
-            "Seq2Seq(\n",
-            "  (encoder): Encoder(\n",
-            "    (embedding): Embedding(10359, 50, padding_idx=3)\n",
-            "    (rnn): LSTM(50, 500)\n",
-            "    (dropout): Dropout(p=0.0, inplace=False)\n",
-            "  )\n",
-            "  (decoder): Decoder(\n",
-            "    (embedding): Embedding(10359, 50, padding_idx=3)\n",
-            "    (rnn): LSTM(50, 500)\n",
-            "    (fc_out): Linear(in_features=500, out_features=10359, bias=True)\n",
-            "    (dropout): Dropout(p=0.0, inplace=False)\n",
-            "  )\n",
-            ")\n",
-            "The model has 8,433,759 trainable parameters\n",
-            "out_dir /content/gdrive/My Drive/Modelling_Sentence_Repetition/Code/s2s/saved-models/\n",
-            "hid_dim 500\n",
-            "TFR 0.5\n",
-            "epochs 2\n",
-            "name_string pt-tf05-500-run-1-wemb-06-07-500-50-ep-\n",
-            "tr (tensor([ 3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3, 89, 18, 25, 61]), tensor([ 1, 89, 18, 25, 61,  2,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3]))\n",
-            "va (tensor([   3,    3,    3,    3,    3,    3,    3,  147,   63,  197,  139,  533,\n",
-            "         168,    5, 5648]), tensor([   1,  147,   63,  197,  139,  533,  168,    5, 5648,    2,    3,    3,\n",
-            "           3,    3,    3,    3,    3]))\n"
+            "run is 1\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-39-c88f92b976f6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     77\u001b[0m             \u001b[0mdec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDecoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mOUTPUT_DIM\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDEC_EMB_DIM\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mHID_DIM\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN_LAYERS\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDEC_DROPOUT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0membeddings_matrix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m             \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSeq2Seq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0menc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 79\u001b[0;31m             \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minit_weights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     80\u001b[0m             \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAdam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m             \u001b[0mload_embs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'init_weights' is not defined"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6eAVclZEagT0",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 232
-        },
-        "outputId": "ceb75174-5f43-4a12-f47b-5c84e7b74f5e"
+        "id": "6eAVclZEagT0"
       },
       "source": [
         "def translate_sentence(sentence = \"there were two on there earlier , weren't there\", model = model, device = 'cuda', max_len = 50):\n",
@@ -968,19 +930,7 @@
         "\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-264-1fe1609ae5f7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0mtranslate_sentence\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msentence\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'and what does a cow say'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'cuda'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_len\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0msentence\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"there were two on there earlier , weren't there\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"INPUT:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msentence\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m#if isinstance(sentence, str):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
-          ]
-        }
-      ]
+      "outputs": []
     }
   ]
 }
